gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  namespace: gatus
  labels:
    app: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec: 
      containers:
        - name: gatus
          image: ghcr.io/twin/gatus:stable@sha256:094eb186e55235db367e90e9d56140e5897b7044c41de23cde4cc18e6da1242e
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /config/config.yaml
              subPath: config.yaml
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "50m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gatus-data
        - name: config
          configMap:
            name: gatus-config

---

apiVersion: v1
kind: Service
metadata:
  name: gatus
  namespace: gatus
spec:
  selector:
    app: gatus
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30386
      name: http
  type: NodePort
